set(SOURCE_FILES
    "AbstractFixedQTreeMemMgr.h"
    "AlphaMode.h"
    "ApiLayers.cpp"
    "ApiLayers.h"
    "AttachmentUsageFlags.h"
    "BaseTexture.cpp"
    "BaseTexture.h"
    "Buffer.cpp"
    "Buffer.h"
    "CmdBuffer.cpp"
    "CmdBuffer.h"
    "CmdBufferRecorder.cpp"
    "CmdBufferRecorder.h"
    "CmdBufferWaitCond.h"
    "CmdPool.cpp"
    "CmdPool.h"
    "Defines.h"
    "DescriptorPool.cpp"
    "DescriptorPool.h"
    "DescriptorSet.cpp"
    "DescriptorSet.h"
    "DescriptorSetLayout.cpp"
    "DescriptorSetLayout.h"
    "DeviceExtensions.cpp"
    "DeviceExtensions.h"
    "DeviceMemAlloc.h"
    "DeviceMemMgr.cpp"
    "DeviceMemMgr.h"
    "DeviceSurfaceCaps.cpp"
    "DeviceSurfaceCaps.h"
    "Fence.cpp"
    "Fence.h"
    "Framebuffer.cpp"
    "Framebuffer.h"
    "InstanceExtensions.cpp"
    "InstanceExtensions.h"
    "IRetirementProvider.h"
    "LogicalDevice.cpp"
    "LogicalDevice.h"
    "MutableTexture.cpp"
    "MutableTexture.h"
    "PhysicalDevice.cpp"
    "PhysicalDevice.h"
    "PhysicalDeviceSelection.cpp"
    "PhysicalDeviceSelection.h"
    "Pipeline.cpp"
    "Pipeline.h"
    "PipelineLayout.cpp"
    "PipelineLayout.h"
    "RawBuffer.cpp"
    "RawBuffer.h"
    "RenderPass.cpp"
    "RenderPass.h"
    "RenderPassDef.cpp"
    "RenderPassDef.h"
    "RenderTexture.cpp"
    "RenderTexture.h"
    "RetirementMgr.cpp"
    "RetirementMgr.h"
    "RingbufferMgr.cpp"
    "RingbufferMgr.h"
    "Sampler.cpp"
    "Sampler.h"
    "Semaphore.cpp"
    "Semaphore.h"
    "ShaderModule.cpp"
    "ShaderModule.h"
    "SubpassDef.cpp"
    "SubpassDef.h"
    "Swapchain.cpp"
    "Swapchain.h"
    "Texture.cpp"
    "Texture.h"
    "TextureUtils.cpp"
    "TextureUtils.h"
    "TransferMgr.cpp"
    "TransferMgr.h"
    "TransferTask.cpp"
    "TransferTask.h"
    "Utils.h"
    "VkFormatUtils.cpp"
    "VkFormatUtils.h"
    "VkFuncs.cpp"
    "VkFuncs.h"
    "VulkanInstance.cpp"
    "VulkanInstance.h"
    "WindowSurface.cpp"
    "WindowSurface.h"
)

set(OTHER_FILES
)

set(INCLUDE_PATHS
    "."
)

add_library(${VULKAN_GL_TGT_NAME} ${SOURCE_FILES})
setup_source_groups("${SOURCE_FILES}" "${OTHER_FILES}")

add_psydoom_common_target_compile_options(${VULKAN_GL_TGT_NAME})
target_compile_definitions(${VULKAN_GL_TGT_NAME} PUBLIC -DVGL_VULKAN_1_0=1)     # Target Vulkan 1.0

target_link_libraries(${VULKAN_GL_TGT_NAME}
    ${BASELIB_TGT_NAME}
    ${LIBSDL_TGT_NAME}
)

target_include_directories(${VULKAN_GL_TGT_NAME} PUBLIC ${INCLUDE_PATHS})
