set(BASE_DIR "avocado")
set(SRC_DIR "${BASE_DIR}/src")

set(INCLUDE_PATHS
    ${SRC_DIR}
)

set(SOURCE_FILES
    "${SRC_DIR}/bios/functions.cpp"
    "${SRC_DIR}/bios/functions.h"
    "${SRC_DIR}/config.cpp"
    "${SRC_DIR}/config.h"
    "${SRC_DIR}/cpu/cop0.cpp"
    "${SRC_DIR}/cpu/cop0.h"
    "${SRC_DIR}/cpu/cpu.cpp"
    "${SRC_DIR}/cpu/cpu.h"
    "${SRC_DIR}/cpu/gte/command.h"
    "${SRC_DIR}/cpu/gte/gte.cpp"
    "${SRC_DIR}/cpu/gte/gte.h"
    "${SRC_DIR}/cpu/gte/math.cpp"
    "${SRC_DIR}/cpu/gte/math.h"
    "${SRC_DIR}/cpu/gte/opcodes.cpp"
    "${SRC_DIR}/cpu/instructions.cpp"
    "${SRC_DIR}/cpu/instructions.h"
    "${SRC_DIR}/cpu/opcode.h"
    "${SRC_DIR}/debugger/debugger.cpp"
    "${SRC_DIR}/debugger/debugger.h"
    "${SRC_DIR}/device/cache_control.cpp"
    "${SRC_DIR}/device/cache_control.h"
    "${SRC_DIR}/device/cdrom/cdrom.cpp"
    "${SRC_DIR}/device/cdrom/cdrom.h"
    "${SRC_DIR}/device/cdrom/commands.cpp"
    "${SRC_DIR}/device/cdrom/fifo.h"
    "${SRC_DIR}/device/controller/controller.cpp"
    "${SRC_DIR}/device/controller/controller.h"
    "${SRC_DIR}/device/controller/controller_type.h"
    "${SRC_DIR}/device/controller/peripherals/abstract_device.cpp"
    "${SRC_DIR}/device/controller/peripherals/abstract_device.h"
    "${SRC_DIR}/device/controller/peripherals/analog_controller.cpp"
    "${SRC_DIR}/device/controller/peripherals/analog_controller.h"
    "${SRC_DIR}/device/controller/peripherals/digital_controller.cpp"
    "${SRC_DIR}/device/controller/peripherals/digital_controller.h"
    "${SRC_DIR}/device/controller/peripherals/memory_card.cpp"
    "${SRC_DIR}/device/controller/peripherals/memory_card.h"
    "${SRC_DIR}/device/controller/peripherals/mouse.cpp"
    "${SRC_DIR}/device/controller/peripherals/mouse.h"
    "${SRC_DIR}/device/controller/peripherals/none.cpp"
    "${SRC_DIR}/device/controller/peripherals/none.h"
    "${SRC_DIR}/device/device.h"
    "${SRC_DIR}/device/dma/dma.cpp"
    "${SRC_DIR}/device/dma/dma.h"
    "${SRC_DIR}/device/dma/dma0_channel.cpp"
    "${SRC_DIR}/device/dma/dma0_channel.h"
    "${SRC_DIR}/device/dma/dma1_channel.cpp"
    "${SRC_DIR}/device/dma/dma1_channel.h"
    "${SRC_DIR}/device/dma/dma2_channel.cpp"
    "${SRC_DIR}/device/dma/dma2_channel.h"
    "${SRC_DIR}/device/dma/dma3_channel.cpp"
    "${SRC_DIR}/device/dma/dma3_channel.h"
    "${SRC_DIR}/device/dma/dma4_channel.cpp"
    "${SRC_DIR}/device/dma/dma4_channel.h"
    "${SRC_DIR}/device/dma/dma5_channel.cpp"
    "${SRC_DIR}/device/dma/dma5_channel.h"
    "${SRC_DIR}/device/dma/dma6_channel.cpp"
    "${SRC_DIR}/device/dma/dma6_channel.h"
    "${SRC_DIR}/device/dma/dma_channel.cpp"
    "${SRC_DIR}/device/dma/dma_channel.h"
    "${SRC_DIR}/device/expansion2.cpp"
    "${SRC_DIR}/device/expansion2.h"
    "${SRC_DIR}/device/gpu/gpu.cpp"
    "${SRC_DIR}/device/gpu/gpu.h"
    "${SRC_DIR}/device/gpu/primitive.h"
    "${SRC_DIR}/device/gpu/psx_color.cpp"
    "${SRC_DIR}/device/gpu/psx_color.h"
    "${SRC_DIR}/device/gpu/registers.h"
    "${SRC_DIR}/device/gpu/render/dither.h"
    "${SRC_DIR}/device/gpu/render/render.h"
    "${SRC_DIR}/device/gpu/render/render_line.cpp"
    "${SRC_DIR}/device/gpu/render/render_rectangle.cpp"
    "${SRC_DIR}/device/gpu/render/render_triangle.cpp"
    "${SRC_DIR}/device/gpu/render/texture_utils.h"
    "${SRC_DIR}/device/gpu/rendering_mode.h"
    "${SRC_DIR}/device/gpu/semi_transparency.h"
    "${SRC_DIR}/device/interrupt.cpp"
    "${SRC_DIR}/device/interrupt.h"
    "${SRC_DIR}/device/mdec/algorithm.cpp"
    "${SRC_DIR}/device/mdec/mdec.cpp"
    "${SRC_DIR}/device/mdec/mdec.h"
    "${SRC_DIR}/device/memory_control.cpp"
    "${SRC_DIR}/device/memory_control.h"
    "${SRC_DIR}/device/serial.cpp"
    "${SRC_DIR}/device/serial.h"
    "${SRC_DIR}/device/spu/adsr.cpp"
    "${SRC_DIR}/device/spu/adsr.h"
    "${SRC_DIR}/device/spu/interpolation.cpp"
    "${SRC_DIR}/device/spu/interpolation.h"
    "${SRC_DIR}/device/spu/noise.cpp"
    "${SRC_DIR}/device/spu/noise.h"
    "${SRC_DIR}/device/spu/regs.h"
    "${SRC_DIR}/device/spu/reverb.cpp"
    "${SRC_DIR}/device/spu/reverb.h"
    "${SRC_DIR}/device/spu/spu.cpp"
    "${SRC_DIR}/device/spu/spu.h"
    "${SRC_DIR}/device/spu/voice.cpp"
    "${SRC_DIR}/device/spu/voice.h"
    "${SRC_DIR}/device/timer.cpp"
    "${SRC_DIR}/device/timer.h"
    "${SRC_DIR}/disc/disc.cpp"
    "${SRC_DIR}/disc/disc.h"
    "${SRC_DIR}/disc/empty.h"
    "${SRC_DIR}/disc/format/chd_format.cpp"
    "${SRC_DIR}/disc/format/chd_format.h"
    "${SRC_DIR}/disc/format/cue.cpp"
    "${SRC_DIR}/disc/format/cue.h"
    "${SRC_DIR}/disc/format/cue_parser.cpp"
    "${SRC_DIR}/disc/format/cue_parser.h"
    "${SRC_DIR}/disc/load.cpp"
    "${SRC_DIR}/disc/load.h"
    "${SRC_DIR}/disc/position.cpp"
    "${SRC_DIR}/disc/position.h"
    "${SRC_DIR}/disc/subchannel_q.cpp"
    "${SRC_DIR}/disc/subchannel_q.h"
    "${SRC_DIR}/disc/track.cpp"
    "${SRC_DIR}/disc/track.h"
    # "${SRC_DIR}/imgui/imgui_impl_opengl3.cpp"
    # "${SRC_DIR}/imgui/imgui_impl_opengl3.h"
    # "${SRC_DIR}/imgui/imgui_impl_sdl.cpp"
    # "${SRC_DIR}/imgui/imgui_impl_sdl.h"
    # "${SRC_DIR}/imgui/imgui_memory_editor.h"
    "${SRC_DIR}/input/input_manager.cpp"
    "${SRC_DIR}/input/input_manager.h"
    # "${SRC_DIR}/platform/headless/main.cpp"
    # "${SRC_DIR}/platform/null/file/file.cpp"
    # "${SRC_DIR}/platform/null/sound/sound.cpp"
    # "${SRC_DIR}/platform/windows/file/file.cpp"
    # "${SRC_DIR}/platform/windows/gui/debug/cdrom.cpp"
    # "${SRC_DIR}/platform/windows/gui/debug/cdrom.h"
    # "${SRC_DIR}/platform/windows/gui/debug/cpu.cpp"
    # "${SRC_DIR}/platform/windows/gui/debug/cpu.h"
    # "${SRC_DIR}/platform/windows/gui/debug/gpu.cpp"
    # "${SRC_DIR}/platform/windows/gui/debug/gpu.h"
    # "${SRC_DIR}/platform/windows/gui/debug/gte.cpp"
    # "${SRC_DIR}/platform/windows/gui/debug/gte.h"
    # "${SRC_DIR}/platform/windows/gui/debug/io.cpp"
    # "${SRC_DIR}/platform/windows/gui/debug/io.h"
    # "${SRC_DIR}/platform/windows/gui/debug/kernel.cpp"
    # "${SRC_DIR}/platform/windows/gui/debug/kernel.h"
    # "${SRC_DIR}/platform/windows/gui/debug/spu.cpp"
    # "${SRC_DIR}/platform/windows/gui/debug/spu.h"
    # "${SRC_DIR}/platform/windows/gui/debug/timers.cpp"
    # "${SRC_DIR}/platform/windows/gui/debug/timers.h"
    # "${SRC_DIR}/platform/windows/gui/file/file.cpp"
    # "${SRC_DIR}/platform/windows/gui/file/file.h"
    # "${SRC_DIR}/platform/windows/gui/filesystem.h"
    # "${SRC_DIR}/platform/windows/gui/gui.cpp"
    # "${SRC_DIR}/platform/windows/gui/gui.h"
    # "${SRC_DIR}/platform/windows/gui/help/about.cpp"
    # "${SRC_DIR}/platform/windows/gui/help/about.h"
    # "${SRC_DIR}/platform/windows/gui/images.cpp"
    # "${SRC_DIR}/platform/windows/gui/images.h"
    # "${SRC_DIR}/platform/windows/gui/options/memory_card.cpp"
    # "${SRC_DIR}/platform/windows/gui/options/memory_card.h"
    # "${SRC_DIR}/platform/windows/gui/options/options.cpp"
    # "${SRC_DIR}/platform/windows/gui/options/options.h"
    # "${SRC_DIR}/platform/windows/gui/stb_image.cpp"
    # "${SRC_DIR}/platform/windows/gui/stb_image_write.cpp"
    # "${SRC_DIR}/platform/windows/gui/toasts.cpp"
    # "${SRC_DIR}/platform/windows/gui/toasts.h"
    # "${SRC_DIR}/platform/windows/input/key.cpp"
    # "${SRC_DIR}/platform/windows/input/key.h"
    # "${SRC_DIR}/platform/windows/input/sdl_input_manager.cpp"
    # "${SRC_DIR}/platform/windows/input/sdl_input_manager.h"
    # "${SRC_DIR}/platform/windows/main.cpp"
    # "${SRC_DIR}/platform/windows/sound/sound.cpp"
    # "${SRC_DIR}/renderer/opengl/opengl.cpp"
    # "${SRC_DIR}/renderer/opengl/opengl.h"
    # "${SRC_DIR}/renderer/opengl/shader/attribute.cpp"
    # "${SRC_DIR}/renderer/opengl/shader/attribute.h"
    # "${SRC_DIR}/renderer/opengl/shader/buffer.cpp"
    # "${SRC_DIR}/renderer/opengl/shader/buffer.h"
    # "${SRC_DIR}/renderer/opengl/shader/framebuffer.cpp"
    # "${SRC_DIR}/renderer/opengl/shader/framebuffer.h"
    # "${SRC_DIR}/renderer/opengl/shader/program.cpp"
    # "${SRC_DIR}/renderer/opengl/shader/program.h"
    # "${SRC_DIR}/renderer/opengl/shader/shader.cpp"
    # "${SRC_DIR}/renderer/opengl/shader/shader.h"
    # "${SRC_DIR}/renderer/opengl/shader/texture.cpp"
    # "${SRC_DIR}/renderer/opengl/shader/texture.h"
    # "${SRC_DIR}/renderer/opengl/shader/uniform.cpp"
    # "${SRC_DIR}/renderer/opengl/shader/uniform.h"
    # "${SRC_DIR}/renderer/opengl/shader/vertex_array_object.cpp"
    # "${SRC_DIR}/renderer/opengl/shader/vertex_array_object.h"
    "${SRC_DIR}/sound/adpcm.cpp"
    "${SRC_DIR}/sound/adpcm.h"
    "${SRC_DIR}/sound/sound.h"
    "${SRC_DIR}/sound/tables.cpp"
    "${SRC_DIR}/sound/tables.h"
    "${SRC_DIR}/state/state.cpp"
    "${SRC_DIR}/state/state.h"
    "${SRC_DIR}/stdafx.cpp"
    "${SRC_DIR}/stdafx.h"
    "${SRC_DIR}/system.cpp"
    "${SRC_DIR}/system.h"
    "${SRC_DIR}/system_tools.cpp"
    "${SRC_DIR}/system_tools.h"
    "${SRC_DIR}/utils/address.h"
    "${SRC_DIR}/utils/bcd.cpp"
    "${SRC_DIR}/utils/bcd.h"
    "${SRC_DIR}/utils/cd.h"
    "${SRC_DIR}/utils/event.cpp"
    "${SRC_DIR}/utils/event.h"
    "${SRC_DIR}/utils/file.cpp"
    "${SRC_DIR}/utils/file.h"
    "${SRC_DIR}/utils/json_enum.h"
    "${SRC_DIR}/utils/logic.h"
    "${SRC_DIR}/utils/macros.h"
    "${SRC_DIR}/utils/math.h"
    "${SRC_DIR}/utils/psf.cpp"
    "${SRC_DIR}/utils/psf.h"
    "${SRC_DIR}/utils/psx_exe.h"
    "${SRC_DIR}/utils/string.cpp"
    "${SRC_DIR}/utils/string.h"
)

set(OTHER_FILES
)

add_library(${AVOCADO_TGT_NAME} ${SOURCE_FILES} ${OTHER_FILES})
setup_source_groups("${SOURCE_FILES}" "${OTHER_FILES}")
target_include_directories(${AVOCADO_TGT_NAME} PUBLIC ${INCLUDE_PATHS})

target_link_libraries(${AVOCADO_TGT_NAME}
    ${CEREAL_TGT_NAME}
    ${FMT_TGT_NAME}
    ${MAGIC_ENUM_TGT_NAME}
    ${NLOHMANN_JSON_TGT_NAME}
)
