set(BASE_DIR "cereal")
set(INC_DIR "${BASE_DIR}/include")

set(INCLUDE_PATHS
    ${INC_DIR}
)

set(SOURCE_FILES
    "Dummy.cpp"
    "${INC_DIR}/cereal/access.hpp"
    "${INC_DIR}/cereal/archives/adapters.hpp"
    "${INC_DIR}/cereal/archives/binary.hpp"
    "${INC_DIR}/cereal/archives/json.hpp"
    "${INC_DIR}/cereal/archives/portable_binary.hpp"
    "${INC_DIR}/cereal/archives/xml.hpp"
    "${INC_DIR}/cereal/cereal.hpp"
    "${INC_DIR}/cereal/details/helpers.hpp"
    "${INC_DIR}/cereal/details/polymorphic_impl.hpp"
    "${INC_DIR}/cereal/details/polymorphic_impl_fwd.hpp"
    "${INC_DIR}/cereal/details/static_object.hpp"
    "${INC_DIR}/cereal/details/traits.hpp"
    "${INC_DIR}/cereal/details/util.hpp"
    "${INC_DIR}/cereal/external/base64.hpp"
    "${INC_DIR}/cereal/external/rapidjson/allocators.h"
    "${INC_DIR}/cereal/external/rapidjson/cursorstreamwrapper.h"
    "${INC_DIR}/cereal/external/rapidjson/document.h"
    "${INC_DIR}/cereal/external/rapidjson/encodedstream.h"
    "${INC_DIR}/cereal/external/rapidjson/encodings.h"
    "${INC_DIR}/cereal/external/rapidjson/error/en.h"
    "${INC_DIR}/cereal/external/rapidjson/error/error.h"
    "${INC_DIR}/cereal/external/rapidjson/filereadstream.h"
    "${INC_DIR}/cereal/external/rapidjson/filewritestream.h"
    "${INC_DIR}/cereal/external/rapidjson/fwd.h"
    "${INC_DIR}/cereal/external/rapidjson/internal/biginteger.h"
    "${INC_DIR}/cereal/external/rapidjson/internal/diyfp.h"
    "${INC_DIR}/cereal/external/rapidjson/internal/dtoa.h"
    "${INC_DIR}/cereal/external/rapidjson/internal/ieee754.h"
    "${INC_DIR}/cereal/external/rapidjson/internal/itoa.h"
    "${INC_DIR}/cereal/external/rapidjson/internal/meta.h"
    "${INC_DIR}/cereal/external/rapidjson/internal/pow10.h"
    "${INC_DIR}/cereal/external/rapidjson/internal/regex.h"
    "${INC_DIR}/cereal/external/rapidjson/internal/stack.h"
    "${INC_DIR}/cereal/external/rapidjson/internal/strfunc.h"
    "${INC_DIR}/cereal/external/rapidjson/internal/strtod.h"
    "${INC_DIR}/cereal/external/rapidjson/internal/swap.h"
    "${INC_DIR}/cereal/external/rapidjson/istreamwrapper.h"
    "${INC_DIR}/cereal/external/rapidjson/memorybuffer.h"
    "${INC_DIR}/cereal/external/rapidjson/memorystream.h"
    "${INC_DIR}/cereal/external/rapidjson/msinttypes/inttypes.h"
    "${INC_DIR}/cereal/external/rapidjson/msinttypes/stdint.h"
    "${INC_DIR}/cereal/external/rapidjson/ostreamwrapper.h"
    "${INC_DIR}/cereal/external/rapidjson/pointer.h"
    "${INC_DIR}/cereal/external/rapidjson/prettywriter.h"
    "${INC_DIR}/cereal/external/rapidjson/rapidjson.h"
    "${INC_DIR}/cereal/external/rapidjson/reader.h"
    "${INC_DIR}/cereal/external/rapidjson/schema.h"
    "${INC_DIR}/cereal/external/rapidjson/stream.h"
    "${INC_DIR}/cereal/external/rapidjson/stringbuffer.h"
    "${INC_DIR}/cereal/external/rapidjson/writer.h"
    "${INC_DIR}/cereal/external/rapidxml/rapidxml.hpp"
    "${INC_DIR}/cereal/external/rapidxml/rapidxml_iterators.hpp"
    "${INC_DIR}/cereal/external/rapidxml/rapidxml_print.hpp"
    "${INC_DIR}/cereal/external/rapidxml/rapidxml_utils.hpp"
    "${INC_DIR}/cereal/macros.hpp"
    "${INC_DIR}/cereal/specialize.hpp"
    "${INC_DIR}/cereal/types/array.hpp"
    "${INC_DIR}/cereal/types/atomic.hpp"
    "${INC_DIR}/cereal/types/base_class.hpp"
    "${INC_DIR}/cereal/types/bitset.hpp"
    "${INC_DIR}/cereal/types/boost_variant.hpp"
    "${INC_DIR}/cereal/types/chrono.hpp"
    "${INC_DIR}/cereal/types/common.hpp"
    "${INC_DIR}/cereal/types/complex.hpp"
    "${INC_DIR}/cereal/types/concepts/pair_associative_container.hpp"
    "${INC_DIR}/cereal/types/deque.hpp"
    "${INC_DIR}/cereal/types/forward_list.hpp"
    "${INC_DIR}/cereal/types/functional.hpp"
    "${INC_DIR}/cereal/types/list.hpp"
    "${INC_DIR}/cereal/types/map.hpp"
    "${INC_DIR}/cereal/types/memory.hpp"
    "${INC_DIR}/cereal/types/optional.hpp"
    "${INC_DIR}/cereal/types/polymorphic.hpp"
    "${INC_DIR}/cereal/types/queue.hpp"
    "${INC_DIR}/cereal/types/set.hpp"
    "${INC_DIR}/cereal/types/stack.hpp"
    "${INC_DIR}/cereal/types/string.hpp"
    "${INC_DIR}/cereal/types/tuple.hpp"
    "${INC_DIR}/cereal/types/unordered_map.hpp"
    "${INC_DIR}/cereal/types/unordered_set.hpp"
    "${INC_DIR}/cereal/types/utility.hpp"
    "${INC_DIR}/cereal/types/valarray.hpp"
    "${INC_DIR}/cereal/types/variant.hpp"
    "${INC_DIR}/cereal/types/vector.hpp"
    "${INC_DIR}/cereal/version.hpp"
)

set(OTHER_FILES
)

add_library(${CEREAL_TGT_NAME} ${SOURCE_FILES} ${OTHER_FILES})
setup_source_groups("${SOURCE_FILES}" "${OTHER_FILES}")
target_include_directories(${CEREAL_TGT_NAME} PUBLIC ${INCLUDE_PATHS})
